--- a/index.html
+++ b/index.html
@@ -18,5 +18,88 @@
          Frontend devoloper
       </p>
    </header>
+   <section>
+      <div class="about__me">
+         <h1>About me</h1>
+         <p>
+            I study at BSU. Independent work for about a year. I am working hard to become a front-end developer.
+         </p>
+      </div>
+      <div class="skills">
+         <h1>
+            Skills
+         </h1>
+         <ul>
+            <li>HTMl5</li>
+            <li>Css3</li>
+            <li>Sass</li>
+            <li>Javascript</li>
+            <li>Docker</li>
+            <li>Git</li>
+            <li>C++</li>
+         </ul>
+      </div>
+      <div class="examples">
+         <h1>
+            Code examples
+         </h1>
+        <pre>
+         <code type='Javascript'>
+            let personal = {</br>
+               [Symbol.iterator](){</br>
+                let i = 0;</br>
+                  return{</br>
+                   next(){</br>
+                      if(i<arr.length){</br>
+                         return { </br>
+                            value:arr[i++],</br>
+                            done:false</br>
+                         }</br>
+                      }</br>
+                      else{</br>
+                         return {</br>
+                            value:undefined,</br>
+                            done:true</br>
+                         }</br>
+                      }</br>
+                   }</br>
+                  } </br>
+             }</br>
+          }
+          for(key of personal){
+            console.log(key); 
+         }
+         </br>
+         </code>
+        </pre>
+      </div>
+      <div class="projects">
+         <h1>
+            Projects
+         </h1>
+         <p>
+            <a href="https://github.com/vladdominator/REDPEAS">https://github.com/vladdominator/REDPEAS</a>
+         </p>
+         <p>
+            <a href="https://vladdominator.github.io/">https://vladdominator.github.io/</a>
+         </p>
+         </div>
+      <div class="education">
+         <h1>
+            Education
+         </h1>
+         <p>
+            Web programming Faculty of Mechanics and Mathematics, BSU.
+         </p>
+      </div>
+      <div class="level">
+         <h1>
+            English level
+         </h1>
+         <p>
+            A2(Pre-intermediate)
+         </p>
+      </div>
+   </section>
 </body>
 </html>
