feat: add footer

--- a/index.html
+++ b/index.html
@@ -101,5 +101,16 @@
          </p>
       </div>
    </section>
+   <footer>
+      <a href="https://vk.com/id360478769">
+         <img src="files/vk.png" alt="vk">
+      </a>
+      <a href="https://t.me/vladDominator">
+         <img src="files/telegram.png" alt="telegram">
+      </a>
+      <a href="https://www.instagram.com/v.zhilinskiy/?hl=ru">
+         <img src="files/instagram.png" alt="instagram">
+      </a>
+   </footer>
 </body>
 </html>
